Add um paragrafo
Adicionei um paragrafo de TESTE.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>TESTE REPOSITOTY</h1>
     <P>Primeiro Repositorio criado com GIT e GITHUB...</P>
+    <p>Paragrafo de TESTE...</p>
 </body>
 </html>
